--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto; 
   line-height: 1.5;
   font-weight: 400;
+
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -28,6 +29,27 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+@media (max-width: 576px) {
+  body {
+    margin: 0 10px; 
+  padding-top: 140px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 992px) {
+  body {
+    margin: 0 30px;
+  padding-top:65px; 
+  }
+}
+
+@media (min-width: 992px) {
+  body {
+    margin: 0 40px; 
+  padding-top:70px;
+  }
 }
 
 h1 {
