--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
-.body {
+body {
   font-family: 'Roboto', sans-serif;
+  background-color: #202020;
+
 }
 
 .container {
   max-width: 1200px;
+
   margin: 0 auto;
   padding: 0 20px;
+
 }
 
 /* Responsiveness */
