--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,14 +1,16 @@
 
 .navbar {
     font-family: 'Roboto', sans-serif;
-    position: fixed;
+    position: sticky;
+    z-index:1000;
+    background-color: #202020; 
     top: 0;
-    left: 10px; /* Ajusta según tus necesidades */
-    width: calc(100% - 20px); /* Resta 20px para compensar el margen izquierdo */
+    left: 10px; 
+    width: calc(100% - 20px); 
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 10px; /* Ajusta según tus necesidades */
+    padding: 10px 40px; 
   }
   
   #custom-navbar img {
@@ -25,16 +27,40 @@
     text-decoration: none;
     color: black;
   }
+
+  
   
   /* Espacio entre el último botón y el borde derecho */
   .nav-links .nav-link:last-child {
-    margin-right: 20px;
+    margin-right: 100px;
   }
   
   /* Ajuste de distancia entre Profile y Logout */
   .nav-links .nav-link:nth-last-child(2) {
-    margin-right: 10px;
+    border-right: 100px;
+    padding-right: 0px; 
   }
+
+ 
+  
+  .logo-link {
+    margin-right: 15px; /* separación del primer enlace */
+  }
+
+ 
+.nav-links button {
+  background-color: #202020;
+  color: white;
+  border: none; 
+  padding: 8px 16px; 
+  margin-right: 15px; 
+}
+
+
+.nav-links button:hover {
+  background-color: #404040;
+}
+
   
   @media (max-width: 650px) {
     .navbar {
@@ -56,3 +82,37 @@
     }
   }
   
+  @media (max-width: 650px) {
+/* Estilos para la línea blanca */
+.navbar-divider {
+  width: 80%; 
+  border: none; 
+  border-top: 1px solid white; 
+  margin-top: 300px; 
+  position: absolute; 
+  left: 5%; 
+}
+  }
+
+  @media (min-width: 651px) and (max-width: 999px) {
+    /* Estilos para la línea blanca */
+.navbar-divider {
+  width: 80%; 
+  border: none; 
+  border-top: 1px solid white; 
+  margin-top: 250px; 
+  position: absolute; 
+  left: 5%; 
+}
+  }
+
+  @media (min-width: 1000px) {
+    .navbar-divider {
+      width: 100%; 
+      border: none; 
+      border-top: 1px solid white; 
+      margin-top: 200px; 
+      position: absolute; 
+      left: 5%; 
+    }
+  }
