--- a/src/pages/ProfilePage.css
+++ b/src/pages/ProfilePage.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: flex-start; 
   padding: 20px; 
+  margin-top:100px;
 }
 
 .welcome-info {
@@ -94,6 +95,7 @@
 
 @media screen and (max-width: 768px) {
   .welcome-info {
+    margin-top:80px;
     flex-direction: column; 
     align-items: flex-start; 
   }
