--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -66,10 +66,14 @@
     .navbar {
       flex-direction: column;
       align-items: flex-start;
+      margin-bottom: 40px;
+      background-color: #202020;
     }
+
+  
   
     #custom-navbar img {
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
   
     .nav-links {
@@ -80,19 +84,19 @@
     .nav-links a {
       margin: 5px;
     }
-  }
-  
-  @media (max-width: 650px) {
-/* Estilos para la línea blanca */
+
+    /* Estilos para la línea blanca */
 .navbar-divider {
   width: 80%; 
   border: none; 
   border-top: 1px solid white; 
-  margin-top: 300px; 
+  margin-top: 270px; 
   position: absolute; 
   left: 5%; 
 }
   }
+  
+
 
   @media (min-width: 651px) and (max-width: 999px) {
     /* Estilos para la línea blanca */
@@ -107,12 +111,34 @@
   }
 
   @media (min-width: 1000px) {
+
+   
     .navbar-divider {
       width: 100%; 
       border: none; 
       border-top: 1px solid white; 
-      margin-top: 200px; 
+      margin-top: 150px; 
       position: absolute; 
       left: 5%; 
     }
+
+    /* Espacio entre el último botón y el borde derecho */
+  .nav-links .nav-link:last-child {
+    margin-left: 50px;
+  }
+  
+  /* Ajuste de distancia entre Profile y Logout */
+  .nav-links .nav-link:nth-last-child(2) {
+    border-right: 100px;
+    padding-right: 0px; 
+  }
+
+ 
+  .logo-link {
+    margin-right: 150px; /* separación del primer enlace */
+    max-height: 100%;
+
+  }
+
+
   }
