--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,51 +1,260 @@
 body {
-  margin-top:40px;
   font-family: 'Roboto', sans-serif;
   background-color: #202020;
+  margin-top: -120px;
+}
+
+@media (max-width: 650px) {
+ 
+  .home-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin-left: -200px;
+    padding-bottom:0px;
+
+  }
+
+  .carousel-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+
+  }
+
+  .carousel {
+    margin-right: 0px; /* Espacio entre el carrusel y el párrafo */
+  }
+
+  .carousel-description {
+    color: white;
+    padding-left: 50px;
+    font-size: 20px;
+    margin-left: 70px;
+    
+  }
+
+  .pending-projects {
+    color: white;
+    margin-bottom: 10px; /* Espacio entre el título de proyectos pendientes y los proyectos */
+  }
+
+  .project-item {
+    display: inline-block;
+    margin-bottom: 60px;
+    margin-top:60px;
+  }
+  
+  .project-item img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px; 
+    border-right:100px;
+  }
+
+  .first-projects-container{
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .project-container {
+    width: 300px;
+    display: inline-flex;
+    flex-direction: column;
+    margin-bottom: 60px;
+    margin-left: 80px;
+    align-items: center; 
+  }
+  
+  .project-container h2 {
+    padding-top:0px;
+    color: white;
+  }
+  
+  
+   h2 {
+    scroll-margin-right: 10px;
+    margin-left: 80px;
+    margin-top: 50px;
+    margin-bottom:60px;
+  
+  }
+  
+  h3{
+    color: white;
+  }
+  
+  .project-image {
+    border-radius: 10px; 
+  }
+  
+}
+
+@media (min-width: 651px) and (max-width: 999px) {
+  .carousel-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 100px;
+  }
+
+  .carousel {
+    margin-right: 20px; /* Espacio entre el carrusel y el párrafo */
+  }
+
+  .carousel-description {
+    color: white;
+    padding-left: 50px;
+  }
+
+  .pending-projects {
+    color: white;
+    margin-bottom: 10px; /* Espacio entre el título de proyectos pendientes y los proyectos */
+  }
+
+  .project-item {
+    display: inline-block;
+    margin-bottom: 60px;
+    margin-top:60px;
+  }
+  
+  .project-item img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px; 
+    border-right:100px;
+  }
+
+  .first-projects-container{
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .project-container {
+    width: 300px;
+    display: inline-flex;
+    flex-direction: column;
+    margin-bottom: 60px;
+    margin-left: 80px;
+    align-items: center; 
+  }
+  
+  .project-container h2 {
+    padding-top:0px;
+    color: white;
+  }
+  
+  
+   h2 {
+    scroll-margin-right: 10px;
+    margin-left: 80px;
+    margin-top: 50px;
+    margin-bottom:60px;
+  
+  }
+  
+  h3{
+    color: white;
+  }
+  
+  .project-image {
+    border-radius: 10px; 
+  }
+  
 }
 
 
-.project-item {
-  display: inline-block;
-  margin-bottom: 60px;
-  margin-top:60px;
+@media (min-width:999px) {
+  .home-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin-left: -200px;
+    padding-bottom:0px;
+
+  }
+
+  .carousel-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-left: 120px;
+    margin-top: 50px;
+  }
+
+  .carousel {
+    margin-right: 50px; /* Espacio entre el carrusel y el párrafo */
+  }
+
+  .carousel-description {
+    color: white;
+    padding-left: 150px;
+    font-size: 30px;
+    line-height: 60px; /* Ajusta el espaciado entre líneas según sea necesario */
+  }
+  
+  .carousel-description span {
+    display: block; /* Coloca cada elemento en una línea separada */
+  }
+  
+  .pending-projects {
+    color: white;
+    margin-bottom: 10px; /* Espacio entre el título de proyectos pendientes y los proyectos */
+  }
+
+  .project-item {
+    display: inline-block;
+    margin-bottom: 60px;
+    margin-top:60px;
+  }
+  
+  .project-item img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px; 
+    border-right:100px;
+  }
+
+  .first-projects-container{
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .project-container {
+    width: 300px;
+    display: inline-flex;
+    flex-direction: column;
+    margin-bottom: 60px;
+    margin-left: 80px;
+    align-items: center; 
+  }
+  
+  .project-container h2 {
+    padding-top:50px;
+    color: white;
+  }
+  
+  
+   h2 {
+    scroll-margin-right: 10px;
+    margin-left: 80px;
+    margin-top: 50px;
+    margin-bottom:60px;
+  
+  }
+  
+  h3{
+    color: white;
+  }
+  
+  .project-image {
+    border-radius: 10px; 
+  }
+
+  
 }
-
-.project-item img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px; 
-  border-right:100px;
-}
-
-.project-container {
-  display: inline-flex;
-  flex-direction: column;
-  margin-bottom: 60px;
-  margin-left: 80px;
-  align-items: center; 
-}
-
-.project-container h2 {
-  color: white;
-}
-
-
-
- h2 {
-  scroll-margin-right: 10px;
-  margin-left: 80px;
-  margin-top: 200px;
-  margin-bottom:60px;
-
-}
-
-h3{
-  color: white;
-}
-
-.project-image {
-  border-radius: 10px; 
-}
-
-
